k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: three-tier

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: utej8553/mernfrontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
