k8s/backend-service.yml
apiVersion: apps/v1
kind: Service
metadata:
  name: backend-service
  namespace: three-tier
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
